# ryile-server

./: .env  .gitignore  README.md  alembic.ini  pyproject.toml
store/: config.py
store/adapters/: db.py  repository.py  tables.py  unitofwork.py
store/adapters/repositories/: item.py  user.py
store/controllers/: __init__.py  auth.py  dto.py  guards.py  item.py  user.py
store/domain/: auth_logic.py  checks.py  commands.py  exceptions.py  item_logic.py  token_logic.py  user_logic.py
store/domain/entities/: item.py  user.py
store/domain/value_objects/: category.py
store/entrypoints/: app.py
store/handlers/: auth.py  exceptions.py
store/migrations/: env.py
store/migrations/versions/: 2025_03_01_1524-dc2475e2891b_create_user_table.py  2025_03_04_1700-0deddb744127_add_is_admin_field.py  2025_03_04_1717-b9d53674eeed_email_now_is_unique.py  2025_03_04_2326-28a92c16838b_add_category_table.py  2025_03_04_2332-564aecc40acd_fill_in_category_table.py  2025_03_05_0104-b28d016c9be7_add_item_table.py
store/services/: auth.py  item.py  user.py
store/utils/: dataclasses.py
