[tool.poetry]
name = "ryile-server"
version = "0.1.0"
description = ""
authors = ["Bogdan Objilean <bodea0001@gmail.com>", "Arseny Nebozhenko <nebozhenko.arseny@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.38"
asyncpg = "^0.30.0"
pydantic-settings = "^2.8.1"
alembic = "^1.14.1"
litestar = { extras = ["standard"], version = "^2.15.1" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
email-validator = "^2.2.0"
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
